// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`only renders content if its there 1`] = `
<div
  className=""
>
  <button
    className="is-hidden-tablet button is-white"
    onClick={[Function]}
    type="button"
  >
    <Icon
      className={null}
      icon="angle-right"
      type="fas"
    />
  </button>
</div>
`;

exports[`only renders content if its there 2`] = `
<div
  className=""
>
  <button
    className="is-hidden-tablet button is-white"
    onClick={[Function]}
    type="button"
  >
    <Icon
      className={null}
      icon="angle-right"
      type="fas"
    />
  </button>
  <content
    className={undefined}
    currentPage={null}
  />
</div>
`;

exports[`should close when clicked outside 1`] = `
<div
  className=""
>
  <button
    className="is-hidden-tablet button is-white"
    onClick={[Function]}
    type="button"
  >
    <i
      className="fas fa-angle-left"
    />
  </button>
</div>
`;

exports[`should close when clicked outside 2`] = `
<div
  className=""
>
  <button
    className="is-hidden-tablet button is-white"
    onClick={[Function]}
    type="button"
  >
    <i
      className="fas fa-angle-right"
    />
  </button>
</div>
`;

exports[`should open and close 1`] = `
<div
  className=""
>
  <button
    className="is-hidden-tablet button is-white"
    onClick={[Function]}
    type="button"
  >
    <i
      className="fas fa-angle-left"
    />
  </button>
</div>
`;

exports[`should open and close 2`] = `
<div
  className=""
>
  <button
    className="is-hidden-tablet button is-white"
    onClick={[Function]}
    type="button"
  >
    <i
      className="fas fa-angle-right"
    />
  </button>
</div>
`;
